More improvements in difficulty selection and FTB choices

--- a/public/modules/core/css/material.scss
+++ b/public/modules/core/css/material.scss
@@ -4,7 +4,7 @@
   font-weight: 400;
   src: local('Material Icons'), 
        local('MaterialIcons-Regular'),
-       url('https://fonts.gstatic.com/s/materialicons/v7/2fcrYFNaTjcS6g4U3t-Y5bbKic1PW3nceB3q24YFOMg.ttf') format('truetype');
+       url('https://fonts.gstatic.com/s/materialicons/v7/2fcrYFNaTjcS6g4U3t-Y5bbKic1PW3nceB3q24YFOMg.ttf?#iefix') format('truetype');
 }
 .material-icons {
   font-family: 'Material Icons';
