--- a/public/modules/core/views/edit-ftb.client.view.html
+++ b/public/modules/core/views/edit-ftb.client.view.html
@@ -7,24 +7,15 @@
                 <input ng-model="challenge.name">
             </md-input-container>
             <md-button ng-disabled="true" class="md-primary">Fill The Options</md-button>
-            <span flex></span>
             <md-button aria-label="Explanation" ng-click="showHint($event)" md-no-ink class="md-primary">Explanation
             </md-button>
-            <md-menu>
-                <md-button aria-label="Difficulty" class="md-raised md-primary"
-                           ng-click="$mdOpenMenu($event)">
-                    {{challenge.challengeFile.difficulty}}
-                    <md-tooltip>
-                        DIFFICULTY
-                    </md-tooltip>
-                </md-button>
-                <md-menu-content width="4">
-                    <md-menu-item ng-repeat="difficulty in ['EASY', 'MEDIUM', 'HARD']">
-                        <md-button ng-click="chooseDifficulty(difficulty)"> {{difficulty}}
-                        </md-button>
-                    </md-menu-item>
-                </md-menu-content>
-            </md-menu>
+            <md-input-container>
+                <label>DIFFICULTY</label>
+                <md-select ng-model="challenge.challengeFile.difficulty">
+                    <md-option ng-repeat="difficulty in ['EASY', 'MEDIUM', 'HARD']" value="{{difficulty}}">{{difficulty}}</md-option>
+                </md-select>
+            </md-input-container>
+            <span flex></span>
             <md-button ng-click="showAdvanced($event)" md-no-ink class="md-primary">Preview</md-button>
         </md-whiteframe>
     </div>
@@ -40,7 +31,7 @@
                     </md-input-container>
                 </div>
 
-                <div flex>
+                <div>
                     <strong>Statements</strong>
                     <md-button ng-click="addOptions()" class="md-icon-button"
                                aria-label="Add statements">
@@ -59,10 +50,9 @@
                                 </md-input-container>
                             </div>
                             <div ng-if="option.type == 'choice' ">
-
                                 <md-input-container>
                                     <label>Choices</label>
-                                    <md-select ng-model="choice">
+                                    <md-select ng-model="option.tmp">
                                         <md-option ng-repeat="choice in option.choices" value="{{choice.string}}">
                                             {{choice.string}}{{choice.isCorrect ? ' (correct)' : ''}}
                                         </md-option>
