--- a/public/modules/core/css/material.css
+++ b/public/modules/core/css/material.css
@@ -2,7 +2,8 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: local("Material Icons"), local("MaterialIcons-Regular"), url("https://fonts.gstatic.com/s/materialicons/v7/2fcrYFNaTjcS6g4U3t-Y5bbKic1PW3nceB3q24YFOMg.ttf") format("truetype"); }
+  src: local("Material Icons"), local("MaterialIcons-Regular"),
+  url("https://fonts.gstatic.com/s/materialicons/v7/2fcrYFNaTjcS6g4U3t-Y5bbKic1PW3nceB3q24YFOMg.ttf?#iefix") format("truetype"); }
 
 /* line 12, C:/MEANMaterial/public/modules/core/css/material.scss */
 .material-icons {
