--- a/public/modules/core/views/edit-ftb.client.add.option.dialog.html
+++ b/public/modules/core/views/edit-ftb.client.add.option.dialog.html
@@ -8,7 +8,7 @@
             </div>
             <div layout="column" flex>
                 <div ng-repeat="option in opt.choices">
-                    <div layout="row" layout-align="center" flex>
+                    <div layout="row" layout-align="center center" flex>
                         <md-input-container flex>
                             <label>Choice {{$index + 1}}</label>
                             <input ng-model="option.string">
