--- a/public/modules/core/views/edit-mcq.client.view.html
+++ b/public/modules/core/views/edit-mcq.client.view.html
@@ -7,7 +7,7 @@
                 <label>Challenge name</label>
                 <input ng-model="challenge.name">
             </md-input-container>
-            <md-button ng-disabled="true" class="md-primary">Multiple Choice Question</md-button>
+            <md-button ng-disabled="true" class="md-primary no-hover">Multiple Choice Question</md-button>
             <md-button aria-label="Explanation" ng-click="showHint($event)" md-no-ink class="md-primary">Explanation
             </md-button>
             <md-input-container>
@@ -41,7 +41,7 @@
                 </div>
                 <div layout="column" flex>
                     <div ng-repeat="option in mcqs">
-                        <div layout="row" layout-align="center" flex>
+                        <div layout="row" layout-align="center center" flex>
 
                             <md-input-container flex>
                                 <label>Option {{$index + 1}}</label>
