--- a/public/modules/core/views/edit-micq.client.view.html
+++ b/public/modules/core/views/edit-micq.client.view.html
@@ -7,7 +7,7 @@
                 <label>Challenge name</label>
                 <input ng-model="challenge.name">
             </md-input-container>
-            <md-button ng-disabled="true" class="md-primary">Multiple Image Choice Question</md-button>
+            <md-button ng-disabled="true" class="md-primary no-hover">Multiple Image Choice Question</md-button>
             <md-button aria-label="Explanation" ng-click="showHint($event)" md-no-ink class="md-primary">Explanation
             </md-button>
             <md-input-container>
