--- a/public/modules/core/views/edit-ftb.client.view.html
+++ b/public/modules/core/views/edit-ftb.client.view.html
@@ -1,12 +1,12 @@
 <section data-ng-controller="ChallengesEditFtbController">
-    <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
+    <div layout="row" layout-align="center center" layout-margin layout-fill layout-padding>
 
         <md-whiteframe class="md-whiteframe-z3" flex layout layout-align="left">
             <md-input-container>
                 <label>Challenge name</label>
                 <input ng-model="challenge.name">
             </md-input-container>
-            <md-button ng-disabled="true" class="md-primary">Fill The Options</md-button>
+            <md-button ng-disabled="true" class="md-primary no-hover">Fill The Options</md-button>
             <md-button aria-label="Explanation" ng-click="showHint($event)" md-no-ink class="md-primary">Explanation
             </md-button>
             <md-input-container>
@@ -20,7 +20,7 @@
         </md-whiteframe>
     </div>
 
-    <div layout="row" layout-align="center" layout-margin layout-fill layout-padding>
+    <div layout="row" layout-align="center center" layout-margin layout-fill layout-padding>
         <md-whiteframe flex class="md-whiteframe-z3" layout layout-align="center center">
             <div layout="column" layout-align="center" layout-margin layout-fill layout-padding>
 
@@ -39,7 +39,7 @@
                     </md-button>
                 </div>
                 <div ng-repeat="options in mcqs">
-                    <div layout="row" layout-align="center" flex>
+                    <div layout="row" layout-align="center center" flex>
                         <div ng-repeat="option in options">
 
                             <div ng-if="option.type == 'text' ">
