--- a/public/modules/core/views/challenge.hint.dialog.html
+++ b/public/modules/core/views/challenge.hint.dialog.html
@@ -58,15 +58,15 @@
                     </md-menu-content>
                 </md-menu>
             </div>
-            <div class="md-actions" layout="row">
-                <span flex></span>
-                <md-button ng-click="hide()">
-                    Cancel
-                </md-button>
-                <md-button ng-click="save()" style="margin-right:20px;">
-                    Save
-                </md-button>
-            </div>
         </md-dialog-content>
+        <div class="md-actions" layout="row">
+            <span flex></span>
+            <md-button ng-click="hide()">
+                Cancel
+            </md-button>
+            <md-button ng-click="save()">
+                Save
+            </md-button>
+        </div>
     </form>
 </md-dialog>
