--- a/public/modules/core/views/courses.client.view.html
+++ b/public/modules/core/views/courses.client.view.html
@@ -5,13 +5,13 @@
             md-row-height-gt-md="1:1" md-row-height="2:2"
             md-gutter="12px" md-gutter-gt-sm="8px">
         <md-grid-tile ng-repeat="course in courses"
-                      class="green" md-rowspan="1" md-colspan="2" ng-click="go(course)">
-            <md-grid-tile-footer>
+                      class="blue" md-rowspan="1" md-colspan="2" ng-click="go(course)">
+            <md-grid-tile-footer class="whitefooter">
                 <h3>{{course.name}}</h3>
             </md-grid-tile-footer>
         </md-grid-tile>
     </md-grid-list>
-    <md-button class="md-fab md-primary" aria-label="Add challenge"
+    <md-button class="md-fab md-primary floating" aria-label="Add challenge"
                ng-click="showDialog($event)">
         <md-icon md-font-set="material-icons" style="width: 2.7rem; height: 1.15rem">add</md-icon>
     </md-button>
