Improves forgot-password process UI

--- a/public/modules/users/views/password/reset-password-invalid.client.view.html
+++ b/public/modules/users/views/password/reset-password-invalid.client.view.html
@@ -1,4 +1,18 @@
 <section class="row text-center">
-	<h3 class="col-md-12">Password reset is invalid</h3>
-	<a href="/#!/password/forgot" class="col-md-12">Ask for a new password reset</a>
+
+    <div layout="column" layout-align="center center">
+        <md-content layout-padding>
+            <md-whiteframe class="md-whiteframe-z2 md-whiteframe-background" layout-padding layout="column">
+                <div layout="column" layout-align="center center">
+                    <h3 class="md-headline">Password reset is invalid</h3>
+                </div>
+                <md-divider></md-divider>
+
+                <div layout="column" layout-align="center end">
+                    <a href="/#!/password/forgot" class="md-button md-raised md-primary">Ask for a new password
+                        reset</a>
+                </div>
+            </md-whiteframe>
+        </md-content>
+    </div>
 </section>
