--- a/public/modules/users/views/password/reset-password-success.client.view.html
+++ b/public/modules/users/views/password/reset-password-success.client.view.html
@@ -1,4 +1,17 @@
 <section class="row text-center">
-	<h3 class="col-md-12">Password successfully reset</h3>
-	<a href="/#!/challenges" class="col-md-12">Continue to home page</a>
+    <div layout="column" layout-align="center center">
+        <md-content layout-padding>
+            <md-whiteframe class="md-whiteframe-z2 md-whiteframe-background" layout-padding layout="column">
+                <div layout="column" layout-align="center center">
+                    <h3 class="md-headline">Password successfully reset</h3>
+                </div>
+                <md-divider></md-divider>
+
+                <div layout="column" layout-align="center end">
+                    <a href="/#!/" class="md-button md-raised md-primary">Continue to home page</a>
+
+                </div>
+            </md-whiteframe>
+        </md-content>
+    </div>
 </section>
