--- a/public/modules/users/views/password/forgot-password.client.view.html
+++ b/public/modules/users/views/password/forgot-password.client.view.html
@@ -1,22 +1,40 @@
 <section class="row" data-ng-controller="PasswordController">
-	<h3 class="col-md-12 text-center">Restore your password</h3>
-	<p class="small text-center">Enter your account username.</p>
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
-		<form data-ng-submit="askForPasswordReset()" class="signin form-horizontal" autocomplete="off">
-			<fieldset>
-				<div class="form-group">
-					<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
-				</div>
-				<div class="text-center form-group">
-					<button type="submit" class="btn btn-primary">Submit</button>
-				</div>
-				<div data-ng-show="error" class="text-center text-danger">
-					<strong>{{error}}</strong>
-				</div>
-				<div data-ng-show="success" class="text-center text-success">
-					<strong>{{success}}</strong>
-				</div>
-			</fieldset>
-		</form>
-	</div>
+    <div layout="column" layout-align="center center">
+        <md-content layout-padding>
+            <md-whiteframe class="md-whiteframe-z2 md-whiteframe-background" layout="column" layout-padding>
+                <div layout="column" layout-align="center center">
+                    <h3 class="md-headline">Restore your password</h3>
+                </div>
+
+                <md-divider></md-divider>
+                </br>
+
+                <div layout="column" layout-align="center center">
+                    <p class="small text-center">Enter your account username.</p>
+                </div>
+
+                <form data-ng-submit="askForPasswordReset()" class="signin form-horizontal" autocomplete="off">
+                    <fieldset>
+
+                        <md-input-container flex>
+                            <md-icon>
+                                <i class="material-icons">account_circle</i>
+                            </md-icon>
+                            <input type="text" id="username" name="username" data-ng-model="credentials.username" placeholder="Username">
+                        </md-input-container>
+
+                        <div layout="column" layout-align="center end">
+                            <button type="submit" class="md-button md-raised md-primary">Submit</button><a href="/#!/">Or Cancel</a>
+                        </div>
+                        <div data-ng-show="error" class="md-warn">
+                            <strong data-ng-bind="error"></strong>
+                        </div>
+                        <div data-ng-show="success">
+                            <strong data-ng-bind="success"></strong>
+                        </div>
+                    </fieldset>
+                </form>
+            </md-whiteframe>
+        </md-content>
+    </div>
 </section>
