--- a/public/modules/users/views/password/reset-password.client.view.html
+++ b/public/modules/users/views/password/reset-password.client.view.html
@@ -1,26 +1,46 @@
 <section class="row" data-ng-controller="PasswordController">
-	<h3 class="col-md-12 text-center">Reset your password</h3>
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
-		<form data-ng-submit="resetUserPassword()" class="signin form-horizontal" autocomplete="off">
-			<fieldset>
-				<div class="form-group">
-					<label for="newPassword">New Password</label>
-					<input type="password" id="newPassword" name="newPassword" class="form-control" data-ng-model="passwordDetails.newPassword" placeholder="New Password">
-				</div>
-				<div class="form-group">
-					<label for="verifyPassword">Verify Password</label>
-					<input type="password" id="verifyPassword" name="verifyPassword" class="form-control" data-ng-model="passwordDetails.verifyPassword" placeholder="Verify Password">
-				</div>
-				<div class="text-center form-group">
-					<button type="submit" class="btn btn-large btn-primary">Update Password</button>
-				</div>
-				<div data-ng-show="error" class="text-center text-danger">
-					<strong>{{error}}</strong>
-				</div>
-				<div data-ng-show="success" class="text-center text-success">
-					<strong>{{success}}</strong>
-				</div>
-			</fieldset>
-		</form>
-	</div>
+    <div layout="column" layout-align="center center">
+        <md-content layout-padding>
+            <md-whiteframe class="md-whiteframe-z2 md-whiteframe-background" layout="column">
+                <div layout="column" layout-align="center center">
+                    <h3 class="md-headline">Reset your password</h3>
+                </div>
+                <md-divider></md-divider>
+                </br>
+                <form data-ng-submit="resetUserPassword()" class="signin form-horizontal" autocomplete="off">
+                    <fieldset>
+                        <div layout="column">
+                            <md-input-container flex>
+                                <md-icon>
+                                    <i class="material-icons">vpn_key</i>
+                                </md-icon>
+                                <input type="password" required id="newPassword" name="newPassword"
+                                       data-ng-model="passwordDetails.newPassword" placeholder="New Password">
+                            </md-input-container>
+
+                            <md-input-container flex>
+                                <md-icon>
+                                    <i class="material-icons">vpn_key</i>
+                                </md-icon>
+                                <input type="password" required id="verifyPassword" name="verifyPassword"
+                                       data-ng-model="passwordDetails.verifyPassword" placeholder="Repeat Password">
+                            </md-input-container>
+                        </div>
+
+                        <div layout="column" layout-align="center end">
+                            <button type="submit" class="md-button md-raised md-primary">Update password</button>
+                            <a href="/#!/">Or Cancel</a>
+
+                            <div data-ng-show="success" class="text-center text-success">
+                                <strong>{{success}}</strong>
+                            </div>
+                            <div data-ng-show="error" class="text-center text-danger">
+                                <strong data-ng-bind="error"></strong>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+            </md-whiteframe>
+        </md-content>
+    </div>
 </section>
